--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
 <title>CossiePlay</title>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
 </head>
+	<body>
+    	<div id="background">
+        	<img src="images/WinterKingdom.jpg" class="stretch" alt="" />
+        </div>
+    	
 
-<body>
 
 
 
 
 
-
-</body>
+	</body>
 </html>
