Page comes together

--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>CossiePlay - Homepage</title>
+<title>CossiePlay - About Us</title>
 <link href="stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 	<body>
@@ -20,17 +20,18 @@
         </div>
         
         <div id="contentwrapper">
-         <div id="column1">
-          <h1>CossiePlay Homepage</h1>   	
-       	 </div>
+        	<div id="column1">
+            <h1>About Us</h1>	
+       	  </div>
    				<div id="column2">
-            	 <p><strong>We create outstanding custom-made costumes!</strong></p> 
-                 <p><a href="contact.html"><em><u>Call us</u></em></a> now for a quote and please check our current range <a href="costumes.html"><em><u>here</u></em>.</a></p>
-                 <img src="images/Sewing.jpg" alt="A picture of a sewing machine">           			
+                 <p><img src="images/Sally.jpg" alt="A picture of Sally in Cosplay"></p>
+            	 <p><strong>Sally Rogers</strong></p>
+                 <p>After only 6 weeks of her first dress-making course, Sally was already designing and sewing elaborate ball gowns and costumes that amazed her instructors.</p>                 <p>10 years later and she’s making even more amazing creations for happy customers.</p>            			
         		</div>
                 <div id="column3">
-                 <p>CossiePlay is a family-run business, operating in Hulkstown since 2012. We create outstanding custom-made costumes. We buy and sell second-hand costumes                   <a href=  "costumes.html"><em><u>(a price list is available)</u></em></a> as well.</p>
-				 <p>On the first Saturday of every month we hold a “CossiePlay Party” at the town hall. Entry is $15 for adults, $10 for ages 6-17 and kids under 6 are free. There is always                  a live DJ at the party (who takes requests) and dancing is common (but not required).</p> <img src="images/Party.jpg" alt="Cosplay Party">	
+                 <p><img src="images/Steven.jpg" alt="A pictre of Steve"></p>
+                 <p><strong>Steven Rogers</strong></p>
+                 <p>Steven was a Navy Seal for 37 years before getting interested in hosting parties and helping people enyoj their fantasies together in a family-friendly fun                  environment.</p>
                 </div>
        </div> <!-- end of contentwrapper -->  
        <div id="footer">
