--- a/news.html
+++ b/news.html
@@ -24,10 +24,18 @@
             	<h1>News</h1>
        	  </div>
    				<div id="column2">
-            	            			
+            	 <h2>Deals</h2>
+                  <ul>
+                   <li>First-time party-goers get a 50% discount on entry</li>
+                   <li><strong>April only</strong> you can purchase 3 drinks for the price of 2 at the bar!</li>
+                   <li>If you get a costume custom made, your next party entry is free if you wear that costume.</li>
+                  </ul>           			
         		</div>
                 <div id="column3">
-                	
+                 <h2>Affiliate Deals</h2>
+                  <ul>
+                   <li>Wear your costume in to KFC on Stanton street and you can get a free drink with a 21-piece bucket. Tell them you’ve been to CossiePlay!</li>
+                  </ul>
                 </div>
        </div> <!-- end of contentwrapper -->  
        <div id="footer">
